# microbiomepfn

./: .gitignore  LICENSE  NOTES_FROM_BOOTSTRAP.md  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: train_t4.ipynb  validation.ipynb
src/microbiomepfn/: __init__.py  deploy.py  eval.py  features.py  finetune.py  interpret.py  losses.py  model.py  prior.py  prior_treatment.py  train.py
tests/: test_features.py  test_finetune_smoke.py  test_model_equivariance.py  test_prior.py  test_prior_treatment.py  test_train_smoke.py
